2006-02-07  Paul Brook  <paul@codesourcery.com>

	* libc/machine/arm/setjmp.S: Add Thumb-2 support.
	* libc/sys/arm/crt0.S: Add Thumb-2 startup code.
	* libc/sys/arm/libcfunc.c (do_AngelSWI): Use AngelSWIInsn.
	* libc/sys/arm/swi.h (AngelSWIInsn, AngelSWIAsm): Define.
	* libc/sys/arm/trap.S: Disable for Thumb-2.

2006-01-31  Leif Ekblad  <leif@rdos.net>

	* configure.host: RDOS support added
	* libc/include/sys/config.h: Ditto.
	* libc/sys/rdos/Makefile.am, libc/sys/rdos/Makefile.in: New files.
	* libc/sys/rdos/aclocal.m4, libc/sys/rdos/chown.c: Ditto.
	* libc/sys/rdos/close.c, libc/sys/rdos/config.h: Ditto.
	* libc/sys/rdos/configure, libc/sys/rdos/configure.in: Ditto.
	* libc/sys/rdos/crt0.S, libc/sys/rdos/execve.c: Ditto.
	* libc/sys/rdos/fork.c, libc/sys/rdos/fstat.c: Ditto.
	* libc/sys/rdos/getenv.c, libc/sys/rdos/getpid.c: Ditto.
	* libc/sys/rdos/gettod.c, libc/sys/rdos/isatty.c: Ditto.
	* libc/sys/rdos/kill.c, libc/sys/rdos/link.c: Ditto.
	* libc/sys/rdos/lseek.c, libc/sys/rdos/open.c: Ditto.
	* libc/sys/rdos/rdos.S, libc/sys/rdos/rdos.h: Ditto.
	* libc/sys/rdos/rdoshelp.c, libc/sys/rdos/read.c: Ditto.
	* libc/sys/rdos/readlink.c, libc/sys/rdos/sbrk.c: Ditto.
	* libc/sys/rdos/stat.c, libc/sys/rdos/symlink.c: Ditto.
	* libc/sys/rdos/times.c, libc/sys/rdos/unlink.c: Ditto.
	* libc/sys/rdos/user.def, libc/sys/rdos/wait.c: Ditto.
	* libc/sys/rdos/write.c: Ditto.

2006-01-24  Jeff Johnston  <jjohnstn@redhat.com>

	* acinclude.m4: Add nodefine to AM_INIT_AUTOMAKE macro invocation
	so as not to define PACKAGE and VERSION in newlib.h.
	* aclocal.m4: Regenerated.
	* configure: Ditto.
	* newlib.hin: Ditto.

2006-01-20  Jeff Johnston  <jjohnstn@redhat.com>

	* acconfig.h: New file to generate newlib.hin from.
	* newlib.hin: Regenerated.
	* stamp-h.in: Regenerated.
	* Makefile.am: Add ACLOCAL_AMFLAGS so aclocal can be
	called automatically.
	* Makefile.in: Regenerated.
	* acinclude.m4: Add proper comment for hack in previous change.