@@ -2,16 +2,22 @@
 #include <stdlib.h>
 #include <string.h>
 
-#define MIN(a,b) ((a) < (b) ? (a) : (b))
-
 char *
 _DEFUN (_strndup_r, (reent_ptr, str, n), 
         struct _reent *reent_ptr  _AND
         _CONST char   *str _AND
         size_t n)
 {
-  size_t len = MIN(strlen (str), n);
-  char *copy = _malloc_r (reent_ptr, len + 1);
+  _CONST char *ptr = str;
+  size_t len;
+  char *copy;
+
+  while (n-- > 0 && *ptr)
+    ptr++;
+
+  len = ptr - str;
+
+  copy = _malloc_r (reent_ptr, len + 1);
   if (copy)
     {
       memcpy (copy, str, len);
